crates/unblock-render/tests/snapshots/snapshots__csv_diagnostics.snap
---
source: crates/unblock-render/tests/snapshots.rs
expression: "render(OutputFormat::Csv, & opts, \"diagnostics\")"
---
label,detail
total,42
open,7
