crates/unblock-render/tests/snapshots/snapshots__csv_issues_empty.snap
---
source: crates/unblock-render/tests/snapshots.rs
expression: "r.issues(&[], &opts).unwrap().stdout"
---
id,title,status,priority,issue_type,assignee,created_at,updated_at
