crates/unblock-render/tests/snapshots/snapshots__json_error_pretty.snap
---
source: crates/unblock-render/tests/snapshots.rs
expression: "render(OutputFormat::Json, & pretty, \"error\")"
---
{
  "code": "VALIDATION_FAILED",
  "message": "title too long",
  "hint": "shorten the title",
  "retryable": true,
  "context": {
    "provided": "danger\u001b[2Jwipe"
  }
}
