crates/unblock-render/tests/snapshots/snapshots__markdown_counts.snap
---
source: crates/unblock-render/tests/snapshots.rs
expression: "render(OutputFormat::Markdown, & opts, \"counts\")"
---
| key | count |
| --- | --- |
| open | 5 |
| in\_progress | 2 |
