crates/unblock-render/tests/snapshots/snapshots__markdown_cycles.snap
---
source: crates/unblock-render/tests/snapshots.rs
expression: "render(OutputFormat::Markdown, & opts, \"cycles\")"
---
- ub\-a → ub\-b → ub\-a
