crates/unblock-render/tests/snapshots/snapshots__markdown_dep_tree.snap
---
source: crates/unblock-render/tests/snapshots.rs
expression: "render(OutputFormat::Markdown, & opts, \"dep_tree\")"
---
- ub\-root
  - ub\-root → ub\-child (parent\-child)
  - ub\-child → ub\-blocked (blocks)
