crates/unblock-render/tests/snapshots/snapshots__markdown_issue.snap
---
source: crates/unblock-render/tests/snapshots.rs
expression: "render(OutputFormat::Markdown, & opts, \"issue\")"
---
## ub\-abc123

- **Title:** Render the docs
- **Status:** in\_progress
- **Priority:** P2
- **Type:** task
- **Assignee:** alice
- **Created:** 2026-01-02T03:04:05Z
- **Updated:** 2026-01-02T03:04:06Z

first line\\nsecond line

### Comments

- **alice** at 2026-01-02T03:04:07Z

a live comment
with a second line

- **bob** at 2026-01-02T03:04:08Z

[redacted 2026-01-03T00:00:00Z]
